--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,14 +56,6 @@
 	</article>
 
 	<article class='login col-xs-4 col-sm-4 col-md-4 col-lg-4'>
-		<a src='#' class='btn btn-primary' id='facebook'>Log in with facebook</a>
-		
-		<p>or</p>
-		
-<div class="col-xs-4-offset-4 col-sm-4-offset-4 col-md-4-offset-4 col-lg-4-offset-4">
-	
-</div>
-
 		<form action='/goal' method="POST" role="form">
 			<div class="form-group">
 				<label for="email">Email</label>
@@ -81,3 +73,11 @@
 	</article>
 
 </main>
+
+<script>
+
+	$(function() {
+		$('nav').hide();
+	});
+
+</script>
