--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,7 +30,7 @@
 
 		<nav>
 			<a href='/goal' class='btn btn-primary'>Goal</a>
-			<a href='/search' class='btn btn-primary'>Food Search</a>
+			<a href='/diary' class='btn btn-primary'>Calendar</a>
 			<a href = '/logout' class="btn btn-primary">Log out</a>
 
 		</nav>
