--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,3 +1,12 @@
+<header>
+
+	<img class='goal_header_img' src='/images/logo_50.jpg' alt='Bacon logo' title='Eat more bacon'>
+	<h1 class='goal_header_h'>Pick a food</h1>
+	<p class='goal_header_p'>Hi, <span class='goal_header_span'><%= currentUser.name %></span></p>
+
+</header>
+
+<main>
 
 	<div class="row">
 		
@@ -17,4 +26,4 @@
 
 	</div>
 
-	
+</main>	
