--- a/views/log.ejs
+++ b/views/log.ejs
@@ -1,7 +1,7 @@
 <header>
 
 	<img class='goal_header_img' src='/images/logo_50.jpg' alt='Bacon logo' title='Eat more bacon'>
-	<h1 class='goal_header_h'>Diary</h1>
+	<h1 class='goal_header_h'>Daily log</h1>
 	<p class='goal_header_p'>Hi, <span class='goal_header_span'><%= currentUser.name %></span></p>
 
 </header>
