--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,7 +1,7 @@
 <header>
 
 	<img class='goal_header_img' src='/images/logo_50.jpg' alt='Bacon logo' title='Eat more bacon'>
-	<h1 class='goal_header_h'>Add Food</h1>
+	<h1 class='goal_header_h'>Food Search</h1>
 	<p class='goal_header_p'>Hi, <span class='goal_header_span'><%= currentUser.name %></span></p>
 
 </header>
@@ -14,7 +14,7 @@
 			<input type="text" class="searchBar form-control" name='search' placeholder="i.e. cheese">
 		</div>
 	
-		<button type="submit" class="btn btn-primary">Search</button>
+		<button type="submit" class="btn btn-primary">Go</button>
 	</form>
 
 	
