--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,8 @@
-<header>
+<header class='row'>
 	
 	<img src='/images/logo_50.jpg' alt='Bacon logo' title='Eat more bacon'>
 	<h1>Ketogenic Diet</h1>
-	<a id="modal_trigger" href="#modal" class="btn btn-primary">Sign Up</a>
+	<a id="modal_trigger" href="#modal" class="signup btn btn-primary">Sign Up</a>
 
 	<div id="modal" class="popupContainer" style="display:none;">
 		<section class="popupHeader">
@@ -46,12 +46,12 @@
 	<hr>
 </header>	
 
-<main class='row'>
+<main class='mainIndex row'>
 	
-	<article class='about col-xs-8 col-sm-8 col-md-8 col-lg-8'>
+	<article class='about col-xs-6 col-sm-6 col-md-6 col-lg-6'>
 		<h2>Enjoy bacons and lose your love handle</h2>
 		<img class='col-xs-3 col-sm-3 col-md-3 col-lg-3' src='/images/bacon_250.jpg' alt='Cheesy bacon' title='Cheesy bacon'>
-		<p class='col-xs-9 col-sm-9 col-md-9 col-lg-9'>Eat bacon as much as you want and loose that love handle. It's not a sales pitch. It's purely science. It's called Ketogenic diet. It has been helping people combat with diabetes type II. Sign up to lean more.lorem</p>
+		<p class='col-xs-9 col-sm-9 col-md-9 col-lg-9'>Eat bacon as much as you want and loose that love handle. It's not a sales pitch. It's purely science. It's called Ketogenic diet. It has been helping people combat with diabetes type II. Sign up to lean more.</p>
 
 	</article>
 
@@ -59,16 +59,13 @@
 		<form action='/goal' method="POST" role="form">
 			<div class="form-group">
 				<label for="email">Email</label>
-				<input name='email' type="text" class="col-xs-4-offset-4 col-sm-4-offset-4 col-md-4-offset-4 col-lg-4-offset-4 form-control" id="email" placeholder="Email">
+				<input name='email' type="text" class="col-xs-4-offset-4 col-sm-4-offset-4 col-md-4-offset-4 col-lg-4-offset-4 form-control" id="email" placeholder="bacon@yahoo.com">
 				<label for="password">Password</label>
-				<input name='password' type="password" class="form-control" id="password" placeholder="Password">
+				<input name='password' type="password" class="form-control" id="password" placeholder="more bacon">
 			</div>
 		
 			<button type="submit" class="btn btn-primary">Log in</button>
 		</form>
-
-		<p id='forgot'>Forgot Username or Password</p>
-		<a href='#'>Click here</a>
 
 	</article>
 
