--- a/views/show.ejs
+++ b/views/show.ejs
@@ -6,18 +6,16 @@
 
 </header>
 
-<main>
+<hr>
+<main class='mainShow'>
 
 	<div class="row">
 		
 			<div class="foodResult">
 				
 				<% data.list.item.forEach(function(food) { %>
-					<a href="<%= '/quantity/' + food.ndbno %> ">
-						<br>
-						<%= food.name %>
-						<br>
-						<b><%= food.ndbno %></b>
+					<a href="<%= '/quantity/' + food.ndbno %> ">						
+						<%= food.name %>						
 					</a>
 					<br>
 				<% }); %>
