--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,6 +12,7 @@
 
   	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" />
 	<link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="/stylesheet/main.css">
 	<link rel="stylesheet" type="text/css" href="/stylesheet/popup.css">
 	
@@ -39,6 +40,22 @@
 
 		<%- body %>	
     	
+		<footer class=' clearfix row'>
+			
+			<div class="left clearfix">
+				<p>Contact me</p>
+				<a href='https://www.facebook.com/profile.php?id=9219530'><i class="fa fa-facebook-square fa-2x"></i></a>
+				<a href='https://twitter.com/theking9985'><i class="fa fa-twitter-square fa-2x"></i></a>
+				<a href='https://www.linkedin.com/in/anhvpham9985'><i class="fa fa-linkedin-square fa-2x"></i></a>
+				<a href='mailto:theking9985@yahoo.com'><i class="fa fa-envelope fa-2x"></i></a>
+			</div>
+
+			<div class="right clearfix">
+				<p>© Copyright 2015</p>
+			</div>
+
+		</footer>
+
 	</div>
 	
 </body>
