--- a/static/stylesheet/main.css
+++ b/static/stylesheet/main.css
@@ -208,13 +208,14 @@ header h1 {
 	border-radius: 4em;
 	margin: 0 auto;
 	width: 70em;
+	height: 42em;
+	overflow-y: scroll;
 }
 
 /*show*/
 .mainShow a {
 	color: #45E4FF;
 	font-size: 1.3em;
-
 }
 
 .mainShow a:hover {
@@ -222,8 +223,7 @@ header h1 {
 }
 
 .foodResult {
-	height: 100vh;
-	overflow-y: scroll;
+	
 }
 
 /*quantity*/
@@ -273,4 +273,37 @@ table, th, td {
 
 th, td {
 	width: 8em;
+}
+
+/*footer*/
+footer {
+	background-color: rgba(255, 255, 255, .05);
+	bottom: 0;
+	height: 4em;
+	position: absolute;
+	width: 100%;
+}
+
+footer a {
+	color: inherit;
+}
+
+footer p {
+	display: inline-block;
+	margin-left: 1em;
+}
+
+i {
+	margin-left: 1em;
+	margin-top: .1em;
+}
+
+.left {
+	float: left;
+	margin: 1em 0 0 1.5em;
+}
+
+.right {
+	float: right;
+	margin: 1em 1em 0 0;
 }
