--- a/views/goal.ejs
+++ b/views/goal.ejs
@@ -45,7 +45,7 @@
 
 	<div id='modal' class='popupContainer' style='display:none;'>
 		<section class='popupHeader'>
-			<span class='header_title'>Change your daily goal</span>
+			<span class='header_title'>Change daily goal</span>
 			<span class='modal_close'><i class='fa fa-times'></i></span>
 		</section>
 
