fixed linkedin and title

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <header class='row'>
 	
 	<img src='/images/logo_50.jpg' alt='Bacon logo' title='Eat more bacon'>
-	<h1>Ketogenic Diet</h1>
+	<h1>Calories Counter</h1>
 	<a id="modal_trigger" href="#modal" class="signup btn btn-primary">Sign Up</a>
 
 	<div id="modal" class="popupContainer" style="display:none;">
