--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,25 +2,21 @@
 <html>
 <head>
 
-
-	
 	<!-- datepicker widget -->
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
   	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
   	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 
-
+  	<meta name="viewport" content="width=device-width, height=device-height initial-scale=1.0"/>
   	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" />
 	<link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="/stylesheet/main.css">
 	<link rel="stylesheet" type="text/css" href="/stylesheet/popup.css">
 	
-	
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/js/jquery.leanModal.min.js"></script>
 	
-
 	<script src='/js/script.js'></script>
 	
 	<title>Calories Counter</title>
@@ -30,12 +26,10 @@
 	<div class="wrapper">
 		<% include partials/alerts %>
 
-
 		<nav>
 			<a href='/goal' class='btn btn-primary'>Goal</a>
 			<a href='/diary' class='btn btn-primary'>Calendar</a>
 			<a href = '/logout' class="btn btn-primary">Log out</a>
-
 		</nav>
 
 		<%- body %>	
@@ -46,8 +40,8 @@
 				<p>Contact me</p>
 				<a href='https://www.facebook.com/profile.php?id=9219530'><i class="fa fa-facebook-square fa-2x"></i></a>
 				<a href='https://twitter.com/theking9985'><i class="fa fa-twitter-square fa-2x"></i></a>
-				<a href='https://www.linkedin.com/in/anhvpham9985'><i class="fa fa-linkedin-square fa-2x"></i></a>
-				<a href='mailto:theking9985@yahoo.com'><i class="fa fa-envelope fa-2x"></i></a>
+				<a href='https://www.linkedin.com/in/andyphamonline'><i class="fa fa-linkedin-square fa-2x"></i></a>
+				<a href='mailto:andyphamonline@gmail.com'><i class="fa fa-envelope fa-2x"></i></a>
 			</div>
 
 			<div class="right clearfix">
