changed index.ejs description

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,8 +51,9 @@
 	<article class='about col-xs-6 col-sm-6 col-md-6 col-lg-6'>
 		<h2>Enjoy bacons and lose your love handle</h2>
 		<img class='col-xs-3 col-sm-3 col-md-3 col-lg-3' src='/images/bacon_250.jpg' alt='Cheesy bacon' title='Cheesy bacon'>
-		<p class='col-xs-9 col-sm-9 col-md-9 col-lg-9'>Eat bacon as much as you want and loose that love handle. It's not a sales pitch. It's purely science. It's called Ketogenic diet. It has been helping people combat with diabetes type II. Sign up to lean more.</p>
-
+		<p class='col-xs-9 col-sm-9 col-md-9 col-lg-9'>Calories counting is the most important step to loose weight. Combining calories counter app and ketogenic diet and you could eat as much bacon as you want and still shred your love handle. Ketogenic diet has also been helping people combat with diabetes type II.
+		<br>
+		Create an account, choose from thousands of food and the app will keep track of everything for you. Sign up to lean more.</p>
 	</article>
 
 	<article class='login col-xs-3 col-sm-3 col-md-3 col-lg-3'>
